<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".Printer.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_20dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16dip"
                android:layout_marginRight="@dimen/_16dip"
                android:layout_marginBottom="@dimen/_16dip"
                android:background="@android:color/white"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_50dip"
                    android:background="@color/zebra_blue"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ipDnsRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dip"
                        android:checked="true"
                        android:text="@string/ip_dns"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/bluetoothRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dip"
                        android:text="@string/bluetooth_r"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8dip"
                    android:layout_marginRight="@dimen/_8dip"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ipAddressText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ip_address"
                        android:textSize="18.0sp" />

                    <EditText
                        android:id="@+id/ipAddressInput"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textNoSuggestions|text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8dip"
                    android:layout_marginRight="@dimen/_8dip">

                    <TextView
                        android:id="@+id/portText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/port"
                        android:textSize="18.0sp" />

                    <EditText
                        android:id="@+id/portInput"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:maxLength="5"
                        android:text="@string/_9100" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8dip"
                    android:layout_marginRight="@dimen/_8dip"
                    android:layout_marginBottom="@dimen/_8dip">

                    <TextView
                        android:id="@+id/macAddressText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mac_address"
                        android:textSize="18.0sp" />

                    <EditText
                        android:id="@+id/macInput"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:inputType="textNoSuggestions|text" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/signAndPrintButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_16dip"
                android:background="@drawable/circle_button_active"
                android:gravity="center"
                android:text="@string/sign_and_print"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sip"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/secondTestButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_available_channels" />


        </LinearLayout>

    </RelativeLayout>

</ScrollView>








