<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:background="@drawable/travelingalone" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="@dimen/_150dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20dip"
                android:hint="@string/usuario"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/_150dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20dip"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_130dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20dip"
                android:text="@string/ingresar"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>