<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/plate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30dip"
        android:layout_marginLeft="@dimen/_10dip"
        android:layout_marginRight="@dimen/_10dip">

        <RelativeLayout
            android:layout_width="@dimen/_50dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:layout_weight="0.2"
            android:background="@drawable/boarder_squer">

            <TextView
                android:id="@+id/tv_documento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/documento"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sip" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_50dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="-1dp"
            android:layout_weight="0.2"
            android:background="@drawable/boarder_squer">

            <TextView
                android:id="@+id/tv_cantidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cantidad"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sip" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="-1dp"
            android:layout_weight="0.2"
            android:background="@drawable/boarder_squer">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sip" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>